--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vtarun/voting-app#readme",
   "dependencies": {
+    "angular-jwt": "^0.1.9",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
@@ -25,6 +26,7 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.0-rc1",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.7",
